2011-10-17  Adam Roben  <aroben@apple.com>

        Windows build fix after r97536, part 2

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def: Added back
        JSC::setUpStaticFunctionSlot with its new mangled name. SOrted the rest of the file while I
        was at it.

2011-10-17  Adam Roben  <aroben@apple.com>

        Windows build fix after r97536

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def: Removed export of
        JSC::setUpStaticFunctionSlot, which no longer exists. Also removed incorrect exports of
        s_info members, which need to be exported via JS_EXPORTDATA instead.

2011-10-17  Patrick Gansterer  <paroga@webkit.org>

        Interpreter build fix after r97436, r97506, r97532 and r97537.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

2011-10-16  Adam Barth  <abarth@webkit.org>

        Always disable ENABLE(ON_FIRST_TEXTAREA_FOCUS_SELECT_ALL) and delete associated code
        https://bugs.webkit.org/show_bug.cgi?id=70216

        Reviewed by Eric Seidel.

        * wtf/Platform.h:

2011-10-16  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Remove PageAllocatorSymbian.h, OSAllocatorSymbian.cpp, gtk/ThreadingGtk.cpp from gyp project files
        https://bugs.webkit.org/show_bug.cgi?id=70205

        Reviewed by James Robinson.

        wtf/PageAllocatorSymbian.h and wtf/OSAllocatorSymbian.cpp were removed in r97557.
        wtf/gtk/ThreadingGtk.cpp was removed in r97269.

        * JavaScriptCore.gypi:

2011-10-16  Adam Barth  <abarth@webkit.org>

        Always enable ENABLE(DOM_STORAGE)
        https://bugs.webkit.org/show_bug.cgi?id=70189

        Reviewed by Eric Seidel.

        * Configurations/FeatureDefines.xcconfig:

2011-10-15  Dan Horák <dan@danny.cz>

        The s390 and s390x architectures both use 64-bit double type
        that conforms to the IEEE-754 standard.

        https://bugs.webkit.org/show_bug.cgi?id=69940
